fixes for banner for tablets(1200px) scrollbar distance between blocks and names distance between name and date of birth

--- a/src/features/MainPage/NewsSlider/NewsSlider.styles.scss
+++ b/src/features/MainPage/NewsSlider/NewsSlider.styles.scss
@@ -4,6 +4,18 @@
 
 .NewsWrapper {
     width: 100%;
+    margin-top: f.pxToRem(117px);
+    margin-bottom: f.pxToRem(80px);
+
+    @media screen and (max-width: 768px) {
+        margin-top: f.pxToRem(52px);
+        margin-bottom: f.pxToRem(30px);
+    }
+
+    @media screen and (max-width: 360px) {
+        margin-top: f.pxToRem(30px);
+        margin-bottom: f.pxToRem(30px);
+    }
 
     .newsSliderComponent {
         margin-bottom: f.pxToRem(30px);
@@ -22,6 +34,7 @@
             width: 100%;
             @include mut.flex-centered();
             margin-top: f.pxToRem(10px);
+            margin-bottom: f.pxToRem(27px);
             padding-top: f.pxToRem(10px);
 
             ::-webkit-scrollbar {
