--- a/src/features/MainPage/StaticBanners/StaticBanner.styles.scss
+++ b/src/features/MainPage/StaticBanners/StaticBanner.styles.scss
@@ -97,12 +97,6 @@
         }
     }
 
-    @media screen and (max-width: 1200px) {
-        &.catalog {
-            height: auto;
-        }
-    }
-
     @media screen and (max-width: 1151px) {
 
         .left,
@@ -164,7 +158,7 @@
         &.catalog {
             @include mut.sized($height: 133px);
             @include mut.full-rounded(20px);
-            @include mut.rem-margined($top: 50px, $right: 10px, $bottom: 50px, $left: 10px);
+            @include mut.rem-margined($top: 50px, $right: 10px, $bottom: 52px, $left: 10px);
             padding: 0;
 
             .mainContainer {
